--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
+    "typescript-styled-plugin": "^0.18.2",
     "vite": "^4.1.0"
   },
   "resolutions": {
